# model-council

./: .env.example  .gitignore  CHANGELOG.md  README.md  compass_artifact_wf-e563925d-66d3-4798-815a-4dfb2d62a0e4_text_markdown.md  council.py  pyproject.toml  requirements.txt
Case Outputs/: sample_output.md
lenses/: README.md  career-bet.md  leap.md
